@@ -4,6 +4,10 @@ Changelog
 2.0b2 - unreleased
 ------------------
 
+- Show "add new" menu when there are one or more addable types. Showing a link
+  when only one type was addable caused conflicts with the dropdown JavaScript.
+  Closes http://dev.plone.org/plone/ticket/10193
+
 - Query the types tool instead of the action tools to find add actions
   in FactoriesSubMenuItem. This fixes a discrepancy in action URLs.
   http://dev.plone.org/plone/ticket/10207
